# Pyramid-Engine

./: .gitignore  133.md  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  FullAnalysis .md  MATH_LIBRARY_ENHANCEMENT_PLAN.md  PYRAMID_ENGINE_MASTER_ROADMAP.md  PYRAMID_IMAGE_LOADER_PROGRESS.md  PyramidEngine_ImprovementRecommendations.md  README.md  ROADMAP.md  SCENE_MANAGEMENT_IMPLEMENTATION_PLAN.md
.github/workflows/: ci.yml
CMake/: Dependencies.cmake
Engine/: CMakeLists.txt
Engine/Core/: CMakeLists.txt
Engine/Core/include/Pyramid/Core/: Game.hpp  Log.hpp  Prerequisites.hpp
Engine/Core/source/: Game.cpp  Prerequisites.cpp
Engine/Graphics/: CMakeLists.txt
Engine/Graphics/include/Pyramid/Graphics/: Camera.hpp  GraphicsDevice.hpp  Scene.hpp  Texture.hpp
Engine/Graphics/include/Pyramid/Graphics/Buffer/: BufferLayout.hpp  IndexBuffer.hpp  InstanceBuffer.hpp  ShaderStorageBuffer.hpp  UniformBuffer.hpp  VertexArray.hpp  VertexBuffer.hpp
Engine/Graphics/include/Pyramid/Graphics/Geometry/: Vertex.hpp
Engine/Graphics/include/Pyramid/Graphics/OpenGL/: OpenGLDevice.hpp  OpenGLFramebuffer.hpp  OpenGLStateManager.hpp  OpenGLTexture.hpp
Engine/Graphics/include/Pyramid/Graphics/OpenGL/Buffer/: OpenGLIndexBuffer.hpp  OpenGLInstanceBuffer.hpp  OpenGLShaderStorageBuffer.hpp  OpenGLUniformBuffer.hpp  OpenGLVertexArray.hpp  OpenGLVertexBuffer.hpp
Engine/Graphics/include/Pyramid/Graphics/OpenGL/Shader/: OpenGLShader.hpp
Engine/Graphics/include/Pyramid/Graphics/Renderer/: RenderPasses.hpp  RenderSystem.hpp  ShaderPathResolver.hpp
Engine/Graphics/include/Pyramid/Graphics/Scene/: Octree.hpp  SceneManager.hpp
Engine/Graphics/include/Pyramid/Graphics/Shader/: Shader.hpp
Engine/Graphics/shaders/: deferred_geometry.frag  deferred_geometry.vert  deferred_lighting.frag  deferred_lighting.vert  forward.frag  forward.vert  shadow.frag  shadow.vert
Engine/Graphics/source/: Camera.cpp  GraphicsDevice.cpp  Scene.cpp  Texture.cpp
Engine/Graphics/source/Buffer/: UniformBuffer.cpp
Engine/Graphics/source/OpenGL/: OpenGLDevice.cpp  OpenGLFramebuffer.cpp  OpenGLStateManager.cpp  OpenGLTexture.cpp
Engine/Graphics/source/OpenGL/Buffer/: OpenGLIndexBuffer.cpp  OpenGLInstanceBuffer.cpp  OpenGLShaderStorageBuffer.cpp  OpenGLUniformBuffer.cpp  OpenGLVertexArray.cpp  OpenGLVertexBuffer.cpp
Engine/Graphics/source/OpenGL/Shader/: OpenGLShader.cpp
Engine/Graphics/source/Renderer/: DeferredGeometryPass.cpp  DeferredLightingPass.cpp  ForwardRenderPass.cpp  RenderSystem.cpp  ShaderPathResolver.cpp  ShadowMapPass.cpp
Engine/Graphics/source/Scene/: Octree.cpp  SceneManager.cpp
Engine/Math/: CMakeLists.txt
Engine/Math/include/Pyramid/Math/: Mat3.hpp  Mat4.hpp  Math.hpp  MathCommon.hpp  MathPerformance.hpp  MathSIMD.hpp  Quat.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
Engine/Math/source/: Mat3.cpp  Mat4.cpp  MathSIMD.cpp  Quat.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp
Engine/Physics/: CMakeLists.txt
Engine/Platform/: CMakeLists.txt
Engine/Platform/include/Pyramid/Platform/: Window.hpp
Engine/Platform/include/Pyramid/Platform/Windows/: Win32OpenGLWindow.hpp
Engine/Platform/source/Windows/: Win32OpenGLWindow.cpp
Engine/Utils/: CMakeLists.txt
Engine/Utils/include/Pyramid/Util/: BitReader.hpp  HuffmanDecoder.hpp  Image.hpp  Inflate.hpp  JPEGColorConverter.hpp  JPEGDequantizer.hpp  JPEGHuffmanDecoder.hpp  JPEGIDCT.hpp  JPEGLoader.hpp  Log.hpp  PNGLoader.hpp  ZLib.hpp
Engine/Utils/source/: BitReader.cpp  HuffmanDecoder.cpp  Image.cpp  Inflate.cpp  JPEGColorConverter.cpp  JPEGDequantizer.cpp  JPEGHuffmanDecoder.cpp  JPEGIDCT.cpp  JPEGLoader.cpp  Log.cpp  PNGLoader.cpp  ZLib.cpp
Engine/Utils/test/: CMakeLists.txt  TestJPEGColorConverter.cpp  TestJPEGDequantizer.cpp  TestJPEGHuffman.cpp  TestJPEGHuffmanDebug.cpp  TestJPEGIDCT.cpp  TestJPEGIntegration.cpp  TestJPEGParser.cpp  TestJPEGSimple.cpp  TestPNGComponents.cpp  TestPNGLoader.cpp
Examples/BasicGame/: CMakeLists.txt
Examples/BasicGame/include/: BasicGame.hpp
Examples/BasicGame/source/: BasicGame.cpp  Main.cpp  Win32Main.cpp
Examples/BasicRendering/: BasicRendering.cpp  BasicRendering.hpp  CMakeLists.txt  Main.cpp  README.md
Game/: CMakeLists.txt  Main.cpp
OpenGL3D/: CMakeLists.txt
OpenGL3D/include/OpenGL3D/Core/: Prerequisites.h
OpenGL3D/include/OpenGL3D/Game/: OglGame.h
OpenGL3D/include/OpenGL3D/Graphics/: IGraphicsDevice.h
OpenGL3D/include/OpenGL3D/Graphics/OpenGL/: OpenGLDevice.h
OpenGL3D/source/OpenGL3D/Game/: OglGame.cpp
OpenGL3D/source/OpenGL3D/Game/Win32Src/: Win32GameSrc.cpp
OpenGL3D/source/OpenGL3D/Graphic/Win32Src/: Win32GraphicSrc.cpp
OpenGL3D/source/OpenGL3D/Graphics/OpenGL/: OpenGLDevice.cpp
OpenGL3D/source/OpenGL3D/Window/: Win32OpenGLWindow.cpp
docs/: ARCHITECTURE_AND_BEST_PRACTICES.md  Architecture.md  BuildGuide.md  CRITICAL_ISSUES_AND_BLOCKERS.md  Contributing.md  Current_Status_Summary.md  Enhanced_Architecture.md  GUI_System_Architecture.md  GettingStarted.md  IMPLEMENTATION_ROADMAP.md  Integration_Strategy.md  Multi_API_Architecture.md  OpenGL_Enhancement_Plan.md  README.md  SceneManagement_API.md  SceneManagement_Examples.md  SmokeTests.md  Window_System_Enhancement.md
docs/API_Reference/: README.md
docs/API_Reference/Audio/: AudioSystem.md
docs/API_Reference/Core/: Game.md
docs/API_Reference/Graphics/: Camera.md  GraphicsDevice.md  RenderSystem.md  SceneManager.md  Texture.md
docs/API_Reference/Input/: InputSystem.md
docs/API_Reference/Math/: MathLibrary.md
docs/API_Reference/Physics/: PhysicsSystem.md
docs/API_Reference/Platform/: Window.md
docs/API_Reference/Utils/: ImageLoading.md  Logging.md
docs/Examples/: README.md
scripts/: configure-clean.ps1  run-smoke.ps1
